--- a/configuration/nginx.conf
+++ b/configuration/nginx.conf
@@ -22,5 +22,36 @@ http {
     listen 80;
     server_name 192.168.1.13;
     root /sites/demo;
+    # the regex location will have priority over a prefix match, regardless of
+    # the order in which they are declared in the config file
+
+    # prefix match - it would return something for paths like /greeting, /greet/page/something
+    location /greet {
+      return 200 'Hello from NGINX "/greet" location';
+    }
+
+    # exact match - HAS THE HIGHEST PRIORITY
+    location = /mypage {
+      return 200 'Hello from NGINX "/mypage" location';
+    }
+
+    # regex - case sensitive
+    location ~ /hello[0-9] {
+      return 200 'Hello from NGINX "/hello" location - REGEX';
+    }
+
+    # regex - case insensitive
+    location ~* /hOWdy[0-9] {
+      return 200 'Hello from NGINX "/howdy" location - REGEX case insensitive';
+    }
+
+    location ~ /HALLO {
+      return 200 'Hello from NGINX "/HALLO" location - REGEX case sensitive';
+    }
+
+    # preferential prefix match - more important than regex
+    location ^~ /HALLO {
+      return 200 'Hello from NGINX "/HALLO" location - preferential prefix match';
+    }
   }
 }
