--- a/configuration/nginx.conf
+++ b/configuration/nginx.conf
@@ -30,28 +30,23 @@ http {
       return 200 'Hello from NGINX "/greet" location';
     }
 
-    # exact match - HAS THE HIGHEST PRIORITY
-    location = /mypage {
-      return 200 'Hello from NGINX "/mypage" location';
+    set $weekend 'No';
+
+    if ( $date_local ~ 'Saturaday|Sunday' ) {
+      set $weekend = 'Yes';
     }
 
-    # regex - case sensitive
-    location ~ /hello[0-9] {
-      return 200 'Hello from NGINX "/hello" location - REGEX';
+    location /is_weekend {
+      return 200 'Is weekend: $weekend';
     }
 
-    # regex - case insensitive
-    location ~* /hOWdy[0-9] {
-      return 200 'Hello from NGINX "/howdy" location - REGEX case insensitive';
+    # check static API key
+    if ( $arg_apikey != 1234 ) {
+      return 401 "Incorrect api key!";
     }
 
-    location ~ /HALLO {
-      return 200 'Hello from NGINX "/HALLO" location - REGEX case sensitive';
-    }
-
-    # preferential prefix match - more important than regex
-    location ^~ /HALLO {
-      return 200 'Hello from NGINX "/HALLO" location - preferential prefix match';
+    location /inspect {
+      return 200 "$host\n$uri\n$args\n individual param value name: $arg_name";
     }
   }
 }
