--- a/configuration/nginx.conf
+++ b/configuration/nginx.conf
@@ -48,5 +48,21 @@ http {
     location /inspect {
       return 200 "$host\n$uri\n$args\n individual param value name: $arg_name";
     }
+
+    rewrite ^/user/\w+ /greet;
+
+    location /greet {
+      return 200 "Hello, user!";
+    }
+
+    location /logo {
+      return 307 '/thumb.png'
+    }
+
+    rewrite ^/bye/(\w+) /goodBye/$1;
+
+    location /goodBye/(?<userName>.*) {
+      return 200 "Goodbye, $userName!";
+    }
   }
 }
