--- a/configuration/nginx.conf
+++ b/configuration/nginx.conf
@@ -22,47 +22,15 @@ http {
     listen 80;
     server_name 192.168.1.13;
     root /sites/demo;
-    # the regex location will have priority over a prefix match, regardless of
-    # the order in which they are declared in the config file
 
-    # prefix match - it would return something for paths like /greeting, /greet/page/something
-    location /greet {
-      return 200 'Hello from NGINX "/greet" location';
+    try_files $uri /cat.png /greet /friendly_404; # this last one performs a rewrite
+
+    location /friendly_404 {
+      return 200 "Could not find the page!";
     }
-
-    set $weekend 'No';
-
-    if ( $date_local ~ 'Saturaday|Sunday' ) {
-      set $weekend = 'Yes';
-    }
-
-    location /is_weekend {
-      return 200 'Is weekend: $weekend';
-    }
-
-    # check static API key
-    if ( $arg_apikey != 1234 ) {
-      return 401 "Incorrect api key!";
-    }
-
-    location /inspect {
-      return 200 "$host\n$uri\n$args\n individual param value name: $arg_name";
-    }
-
-    rewrite ^/user/\w+ /greet;
 
     location /greet {
       return 200 "Hello, user!";
-    }
-
-    location /logo {
-      return 307 '/thumb.png'
-    }
-
-    rewrite ^/bye/(\w+) /goodBye/$1;
-
-    location /goodBye/(?<userName>.*) {
-      return 200 "Goodbye, $userName!";
     }
   }
 }
