--- a/configuration/nginx.conf
+++ b/configuration/nginx.conf
@@ -23,9 +23,9 @@ http {
     server_name 192.168.1.13;
     root /sites/demo;
 
-    try_files $uri /cat.png /greet /friendly_404; # this last one performs a rewrite
+    try_files $uri /cat.png /greet @friendly_404; # this last one performs a rewrite
 
-    location /friendly_404 {
+    location @friendly_404 {
       return 200 "Could not find the page!";
     }
 
