--- a/configuration/nginx.conf
+++ b/configuration/nginx.conf
@@ -23,14 +23,17 @@ http {
     server_name 192.168.1.13;
     root /sites/demo;
 
-    try_files $uri /cat.png /greet @friendly_404; # this last one performs a rewrite
-
-    location @friendly_404 {
-      return 200 "Could not find the page!";
+    location /secure {
+      # custom access_log for this location
+      access_log /var/log/nginx/secure.acces.log;
+      return 200 "Welcome to secure area.";
     }
 
-    location /greet {
-      return 200 "Hello, user!";
+
+    location /test {
+      # disable access log entirely for this location
+      access_log off;
+      return 200 "Welcome to secure area.";
     }
   }
 }
