--- a/configuration/nginx.conf
+++ b/configuration/nginx.conf
@@ -1,3 +1,7 @@
+# the php-fpm socket has the www-data user set by default, and the 
+# nginx worker process nobody - therefore nginx cannot use the socket -> 502
+# in order to fix this, we can, among other solutions, use the line below
+user www-data;
 # reload the nginx systemctl service each time you modify the config file! 
 
 
@@ -7,33 +11,23 @@ events {}
 
 http {
   server {
-    # types {
-      # to properly read the html/css
-      # text/html html;
-      # text/css css; 
-
-      # BUT there is a better way for the thing above:
-      # /etc/nginx/mime.types
-      # file that contains a more comprehensive list
-    # }
-
     include mime.types; # being in the location as the config file
 
     listen 80;
     server_name 192.168.1.13;
     root /sites/demo;
 
-    location /secure {
-      # custom access_log for this location
-      access_log /var/log/nginx/secure.acces.log;
-      return 200 "Welcome to secure area.";
+    index index.php index.html;
+
+    location / { 
+      try_files $uri $uri/ =404;
     }
 
-
-    location /test {
-      # disable access log entirely for this location
-      access_log off;
-      return 200 "Welcome to secure area.";
+    location ~\.php { # requests ending with .php
+      # Pass the requests to the php-fpm service
+      include fastcgi.conf;
+      # the location of the socket can be found with find / -name *fpm.sock
+      fastcgi_pass unix:/run/php/php7.4-fpm.sock;
     }
   }
 }
