set number of worker processes

--- a/configuration/nginx.conf
+++ b/configuration/nginx.conf
@@ -4,6 +4,7 @@
 user www-data;
 # reload the nginx systemctl service each time you modify the config file! 
 
+worker_processes 2;
 
 # need the events context to be considered a valid config file, even though
 # empty for now
