--- a/configuration/nginx.conf
+++ b/configuration/nginx.conf
@@ -4,7 +4,9 @@
 user www-data;
 # reload the nginx systemctl service each time you modify the config file! 
 
-worker_processes auto; # spawns one worker for each CPU core
+events {
+  worker_connections 1024;
+}
 
 # need the events context to be considered a valid config file, even though
 # empty for now
