generic response header

--- a/configuration/nginx.conf
+++ b/configuration/nginx.conf
@@ -32,5 +32,9 @@ http {
       # the location of the socket can be found with find / -name *fpm.sock
       fastcgi_pass unix:/run/php/php7.4-fpm.sock;
     }
+
+    location = /thumb.png {
+      add_header my_header "Hello, world!"; # generic response header
+    }
   }
 }
