--- a/configuration/nginx.conf
+++ b/configuration/nginx.conf
@@ -33,8 +33,16 @@ http {
       fastcgi_pass unix:/run/php/php7.4-fpm.sock;
     }
 
-    location = /thumb.png {
-      add_header my_header "Hello, world!"; # generic response header
+    # instructs the client (e.g. a browser, but any other intermediary 
+    # caching servers as well), to cache resources which you consider
+    # that change rarely - the browser will know to handle these 
+    # header parameters directly and do the caching.
+    location ~* \.(css|js|jpg|png)$ {
+      access_log off;
+      add_header Cache-Control public; # tells the receiving client that this resource or response can be cached in any way
+      add_header Pragma public; # older version of cache-control header
+      add_header Vary Accept-Encoding; # meaning the content of this response can vary with the value being accept encoding
+      expires 1M; # 1 month
     }
   }
 }
