compressed responses with gzip

--- a/configuration/nginx.conf
+++ b/configuration/nginx.conf
@@ -13,6 +13,15 @@ events {
 events {}
 
 http {
+
+  # client needs to indicate that they're willing to accept a compressed response
+  # before the compression happens - relates to add_header Vary Accept-Encoding; bellow
+  # 
+  gzip on;
+  gzip_comp_level 3;
+  gzip_types text/csss; 
+  gzip_types text/javascript;
+
   server {
     include mime.types; # being in the location as the config file
 
@@ -41,6 +50,9 @@ http {
       access_log off;
       add_header Cache-Control public; # tells the receiving client that this resource or response can be cached in any way
       add_header Pragma public; # older version of cache-control header
+      # this is now saying that on this location block, the response can vary
+      # based on the except encoding header the client sends with the request
+      # that variation being compressed or uncompressed
       add_header Vary Accept-Encoding; # meaning the content of this response can vary with the value being accept encoding
       expires 1M; # 1 month
     }
