--- a/configuration/nginx.conf
+++ b/configuration/nginx.conf
@@ -8,22 +8,14 @@ events {
   worker_connections 1024;
 }
 
-# need the events context to be considered a valid config file, even though
-# empty for now
-events {}
-
 http {
+  include mime.types;
 
-  # client needs to indicate that they're willing to accept a compressed response
-  # before the compression happens - relates to add_header Vary Accept-Encoding; bellow
-  # 
-  gzip on;
-  gzip_comp_level 3;
-  gzip_types text/csss; 
-  gzip_types text/javascript;
-
+  # configure microcache (fastcgi)
+  fastcgi_cache_path /tmp/nginx_cache levels=1:2 keys_zone=MYCACHE:100m inactive=60m;
+  fastcgi_cache_key "$scheme$request_method$host$request_uri";
+  add_header X-Cache $upstream_cache_status;
   server {
-    include mime.types; # being in the location as the config file
 
     listen 80;
     server_name 192.168.1.13;
@@ -31,30 +23,33 @@ http {
 
     index index.php index.html;
 
+
+    ### CACHE EXCEPTIONS ###
+    # cache by default
+    set $no_cache 0;
+
+    # Check for cache bypass
+    if ($arg_skipcache = 1) {
+      set $no_cache 1;
+    }
+    ### CACHE EXCEPTIONS ###
+
     location / { 
       try_files $uri $uri/ =404;
     }
 
-    location ~\.php { # requests ending with .php
+    location ~\.php$ { # requests ending with .php
       # Pass the requests to the php-fpm service
       include fastcgi.conf;
       # the location of the socket can be found with find / -name *fpm.sock
       fastcgi_pass unix:/run/php/php7.4-fpm.sock;
-    }
-
-    # instructs the client (e.g. a browser, but any other intermediary 
-    # caching servers as well), to cache resources which you consider
-    # that change rarely - the browser will know to handle these 
-    # header parameters directly and do the caching.
-    location ~* \.(css|js|jpg|png)$ {
-      access_log off;
-      add_header Cache-Control public; # tells the receiving client that this resource or response can be cached in any way
-      add_header Pragma public; # older version of cache-control header
-      # this is now saying that on this location block, the response can vary
-      # based on the except encoding header the client sends with the request
-      # that variation being compressed or uncompressed
-      add_header Vary Accept-Encoding; # meaning the content of this response can vary with the value being accept encoding
-      expires 1M; # 1 month
+      # enable cache
+      fastcgi_cache MYCACHE;
+      fastcgi_cache_valid 200 60m;
+      fastcgi_cache_valid 404 10m;
+      # cache exceptions
+      fastcgi_cache_bypass $no_cache;
+      fastcgi_no_cache $no_cache;
     }
   }
 }
