--- a/configuration/nginx.conf
+++ b/configuration/nginx.conf
@@ -11,28 +11,16 @@ events {
 http {
   include mime.types;
 
-  # configure microcache (fastcgi)
-  fastcgi_cache_path /tmp/nginx_cache levels=1:2 keys_zone=MYCACHE:100m inactive=60m;
-  fastcgi_cache_key "$scheme$request_method$host$request_uri";
-  add_header X-Cache $upstream_cache_status;
   server {
 
-    listen 80;
+    listen 443 ssl http2; #standard port for ssl
     server_name 192.168.1.13;
     root /sites/demo;
 
     index index.php index.html;
 
-
-    ### CACHE EXCEPTIONS ###
-    # cache by default
-    set $no_cache 0;
-
-    # Check for cache bypass
-    if ($arg_skipcache = 1) {
-      set $no_cache 1;
-    }
-    ### CACHE EXCEPTIONS ###
+    ssl_certificate /etc/nginx/ssl/ssl.crt;
+    ssl_certificate_key /etc/nginx/ssl/ssl.key;
 
     location / { 
       try_files $uri $uri/ =404;
@@ -43,13 +31,6 @@ http {
       include fastcgi.conf;
       # the location of the socket can be found with find / -name *fpm.sock
       fastcgi_pass unix:/run/php/php7.4-fpm.sock;
-      # enable cache
-      fastcgi_cache MYCACHE;
-      fastcgi_cache_valid 200 60m;
-      fastcgi_cache_valid 404 10m;
-      # cache exceptions
-      fastcgi_cache_bypass $no_cache;
-      fastcgi_no_cache $no_cache;
     }
   }
 }
